adding a due date

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 <div class="window">
     <header>
         <div class="input">
-            <input type="text" placeholder="Add new task" id="add-task">
+            <input type="text" placeholder="Add new task" class="add-task">
             <button class="add"><img src="Img/Group.png" alt=""></button>
+        </div>
+        <div class="date-box">
+            <input type="text" placeholder='"25"' id="day" class="date input">
+            <input type="text" placeholder='"05"' id="month" class="date input">
         </div>
     </header>
     <main>
     </main>
     <footer>
-        <p>Completed</p>
     </footer>
 </div>
 <script src="script.js"></script>
